fix stuff with RMapElementValues and RElementValues + random code clean